<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btnDB"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_checkout_stocks"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_location_city_black_24dp"
        android:drawableStart="@drawable/ic_location_city_black_24dp"/>
    <Button
        android:id="@+id/btnMap"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_maps"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_room_black_24dp"
        android:drawableStart="@drawable/ic_room_black_24dp"/>
    <Button
        android:id="@+id/btnReminder"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_remnder"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_assignment_black_24dp"
        android:drawableStart="@drawable/ic_assignment_black_24dp"/>
    <Button
        android:id="@+id/btnReport"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_reporting"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawableStart="@drawable/ic_mail_black_24dp"/>
    <Button
        android:id="@+id/btnOptions"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_options"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:drawableStart="@drawable/ic_settings_black_24dp"/>
    <Button
        android:id="@+id/btnExit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_activity_btn_exit"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:drawableLeft="@drawable/ic_cancel_black_24dp"
        android:drawableStart="@drawable/ic_cancel_black_24dp"/>

</LinearLayout>