<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_login_tv_explanation"
        android:id="@+id/tv"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="@+id/btnNext"
            android:imeActionLabel="@string/dialog_reminder_btn_ok"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/dialog_login_et_prompt"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_login_btn_next"
        android:id="@+id/btnNext"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_verified_user_black_24dp"
        android:drawableStart="@drawable/ic_verified_user_black_24dp"/>
</LinearLayout>